exports[`reducers > analysis should handle clear isochrone results 1`] = `
Object {
  "active": false,
  "comparisonInProgress": false,
  "isFetchingIsochrone": false,
  "isochrone": null,
  "isochroneCutoff": 60,
  "isochroneLatLng": null,
  "profileRequest": Object {
    "accessModes": "WALK",
    "bikeSafe": 1,
    "bikeSlope": 1,
    "bikeSpeed": 4.166666666666667,
    "bikeTime": 1,
    "bikeTrafficStress": 4,
    "carSpeed": 20,
    "date": "2016-12-20",
    "directModes": "WALK",
    "egressModes": "WALK",
    "fromTime": 25200,
    "maxBikeTime": 20,
    "maxCarTime": 45,
    "maxRides": 4,
    "maxWalkTime": 20,
    "minBikeTime": 10,
    "minCarTime": 10,
    "monteCarloDraws": 200,
    "reachabilityThreshold": 0,
    "streetTime": 90,
    "suboptimalMinutes": 5,
    "toTime": 32400,
    "transitModes": "TRANSIT",
    "walkSpeed": 1.3888888888888888,
  },
  "regional": Object {
    "breaks": Array [],
    "comparisonGrid": null,
    "comparisonId": null,
    "grid": null,
    "id": null,
    "minimumImprovementProbability": 0.95,
    "percentile": 50,
    "probabilityGrid": null,
  },
}
`;

exports[`reducers > analysis should handle default state 1`] = `
Object {
  "active": false,
  "comparisonInProgress": false,
  "isFetchingIsochrone": false,
  "isochroneCutoff": 60,
  "profileRequest": Object {
    "accessModes": "WALK",
    "bikeSafe": 1,
    "bikeSlope": 1,
    "bikeSpeed": 4.166666666666667,
    "bikeTime": 1,
    "bikeTrafficStress": 4,
    "carSpeed": 20,
    "date": "2016-12-20",
    "directModes": "WALK",
    "egressModes": "WALK",
    "fromTime": 25200,
    "maxBikeTime": 20,
    "maxCarTime": 45,
    "maxRides": 4,
    "maxWalkTime": 20,
    "minBikeTime": 10,
    "minCarTime": 10,
    "monteCarloDraws": 200,
    "reachabilityThreshold": 0,
    "streetTime": 90,
    "suboptimalMinutes": 5,
    "toTime": 32400,
    "transitModes": "TRANSIT",
    "walkSpeed": 1.3888888888888888,
  },
  "regional": Object {
    "breaks": Array [],
    "comparisonGrid": null,
    "comparisonId": null,
    "grid": null,
    "id": null,
    "minimumImprovementProbability": 0.95,
    "percentile": 50,
    "probabilityGrid": null,
  },
}
`;

exports[`reducers > analysis should handle enter analysis mode 1`] = `
Object {
  "active": true,
  "comparisonInProgress": false,
  "isFetchingIsochrone": false,
  "isochroneCutoff": 60,
  "profileRequest": Object {
    "accessModes": "WALK",
    "bikeSafe": 1,
    "bikeSlope": 1,
    "bikeSpeed": 4.166666666666667,
    "bikeTime": 1,
    "bikeTrafficStress": 4,
    "carSpeed": 20,
    "date": "2016-12-20",
    "directModes": "WALK",
    "egressModes": "WALK",
    "fromTime": 25200,
    "maxBikeTime": 20,
    "maxCarTime": 45,
    "maxRides": 4,
    "maxWalkTime": 20,
    "minBikeTime": 10,
    "minCarTime": 10,
    "monteCarloDraws": 200,
    "reachabilityThreshold": 0,
    "streetTime": 90,
    "suboptimalMinutes": 5,
    "toTime": 32400,
    "transitModes": "TRANSIT",
    "walkSpeed": 1.3888888888888888,
  },
  "regional": Object {
    "breaks": Array [],
    "comparisonGrid": null,
    "comparisonId": null,
    "grid": null,
    "id": null,
    "minimumImprovementProbability": 0.95,
    "percentile": 50,
    "probabilityGrid": null,
  },
}
`;

exports[`reducers > analysis should handle exit analysis mode 1`] = `
Object {
  "accessibility": null,
  "active": false,
  "comparisonAccessibility": null,
  "comparisonInProgress": false,
  "comparisonIsochrone": null,
  "comparisonSpectrogramData": null,
  "isFetchingIsochrone": false,
  "isochrone": null,
  "isochroneCutoff": 60,
  "profileRequest": Object {
    "accessModes": "WALK",
    "bikeSafe": 1,
    "bikeSlope": 1,
    "bikeSpeed": 4.166666666666667,
    "bikeTime": 1,
    "bikeTrafficStress": 4,
    "carSpeed": 20,
    "date": "2016-12-20",
    "directModes": "WALK",
    "egressModes": "WALK",
    "fromTime": 25200,
    "maxBikeTime": 20,
    "maxCarTime": 45,
    "maxRides": 4,
    "maxWalkTime": 20,
    "minBikeTime": 10,
    "minCarTime": 10,
    "monteCarloDraws": 200,
    "reachabilityThreshold": 0,
    "streetTime": 90,
    "suboptimalMinutes": 5,
    "toTime": 32400,
    "transitModes": "TRANSIT",
    "walkSpeed": 1.3888888888888888,
  },
  "regional": Object {
    "breaks": Array [],
    "comparisonGrid": null,
    "comparisonId": null,
    "grid": null,
    "id": null,
    "minimumImprovementProbability": 0.95,
    "percentile": 50,
    "probabilityGrid": null,
  },
  "spectrogramData": null,
}
`;

exports[`reducers > analysis should handle set active regional analyses 1`] = `
Object {
  "active": false,
  "comparisonInProgress": false,
  "isFetchingIsochrone": false,
  "isochroneCutoff": 60,
  "profileRequest": Object {
    "accessModes": "WALK",
    "bikeSafe": 1,
    "bikeSlope": 1,
    "bikeSpeed": 4.166666666666667,
    "bikeTime": 1,
    "bikeTrafficStress": 4,
    "carSpeed": 20,
    "date": "2016-12-20",
    "directModes": "WALK",
    "egressModes": "WALK",
    "fromTime": 25200,
    "maxBikeTime": 20,
    "maxCarTime": 45,
    "maxRides": 4,
    "maxWalkTime": 20,
    "minBikeTime": 10,
    "minCarTime": 10,
    "monteCarloDraws": 200,
    "reachabilityThreshold": 0,
    "streetTime": 90,
    "suboptimalMinutes": 5,
    "toTime": 32400,
    "transitModes": "TRANSIT",
    "walkSpeed": 1.3888888888888888,
  },
  "regional": Object {
    "comparisonGrid": null,
    "comparisonId": "comparison id",
    "grid": null,
    "id": "scenario id",
    "minimumImprovementProbability": 0.95,
    "probabilityGrid": null,
  },
}
`;

exports[`reducers > analysis should handle set active variant 1`] = `
Object {
  "active": false,
  "activeVariant": 21,
  "comparisonInProgress": false,
  "isFetchingIsochrone": false,
  "isochroneCutoff": 60,
  "profileRequest": Object {
    "accessModes": "WALK",
    "bikeSafe": 1,
    "bikeSlope": 1,
    "bikeSpeed": 4.166666666666667,
    "bikeTime": 1,
    "bikeTrafficStress": 4,
    "carSpeed": 20,
    "date": "2016-12-20",
    "directModes": "WALK",
    "egressModes": "WALK",
    "fromTime": 25200,
    "maxBikeTime": 20,
    "maxCarTime": 45,
    "maxRides": 4,
    "maxWalkTime": 20,
    "minBikeTime": 10,
    "minCarTime": 10,
    "monteCarloDraws": 200,
    "reachabilityThreshold": 0,
    "streetTime": 90,
    "suboptimalMinutes": 5,
    "toTime": 32400,
    "transitModes": "TRANSIT",
    "walkSpeed": 1.3888888888888888,
  },
  "regional": Object {
    "breaks": Array [],
    "comparisonGrid": null,
    "comparisonId": null,
    "grid": null,
    "id": null,
    "minimumImprovementProbability": 0.95,
    "percentile": 50,
    "probabilityGrid": null,
  },
}
`;

exports[`reducers > analysis should handle set comparison in progress 1`] = `
Object {
  "active": false,
  "comparisonInProgress": true,
  "isFetchingIsochrone": false,
  "isochroneCutoff": 60,
  "profileRequest": Object {
    "accessModes": "WALK",
    "bikeSafe": 1,
    "bikeSlope": 1,
    "bikeSpeed": 4.166666666666667,
    "bikeTime": 1,
    "bikeTrafficStress": 4,
    "carSpeed": 20,
    "date": "2016-12-20",
    "directModes": "WALK",
    "egressModes": "WALK",
    "fromTime": 25200,
    "maxBikeTime": 20,
    "maxCarTime": 45,
    "maxRides": 4,
    "maxWalkTime": 20,
    "minBikeTime": 10,
    "minCarTime": 10,
    "monteCarloDraws": 200,
    "reachabilityThreshold": 0,
    "streetTime": 90,
    "suboptimalMinutes": 5,
    "toTime": 32400,
    "transitModes": "TRANSIT",
    "walkSpeed": 1.3888888888888888,
  },
  "regional": Object {
    "breaks": Array [],
    "comparisonGrid": null,
    "comparisonId": null,
    "grid": null,
    "id": null,
    "minimumImprovementProbability": 0.95,
    "percentile": 50,
    "probabilityGrid": null,
  },
}
`;

exports[`reducers > analysis should handle set comparison modifications 1`] = `
Object {
  "active": false,
  "comparisonBundleId": "COMPARISON BUNDLE ID",
  "comparisonInProgress": false,
  "comparisonModifications": Array [
    "MODIFICATIONS",
  ],
  "comparisonScenarioId": "COMPARISON SCENARIO ID",
  "comparisonVariant": 16,
  "isFetchingIsochrone": false,
  "isochroneCutoff": 60,
  "profileRequest": Object {
    "accessModes": "WALK",
    "bikeSafe": 1,
    "bikeSlope": 1,
    "bikeSpeed": 4.166666666666667,
    "bikeTime": 1,
    "bikeTrafficStress": 4,
    "carSpeed": 20,
    "date": "2016-12-20",
    "directModes": "WALK",
    "egressModes": "WALK",
    "fromTime": 25200,
    "maxBikeTime": 20,
    "maxCarTime": 45,
    "maxRides": 4,
    "maxWalkTime": 20,
    "minBikeTime": 10,
    "minCarTime": 10,
    "monteCarloDraws": 200,
    "reachabilityThreshold": 0,
    "streetTime": 90,
    "suboptimalMinutes": 5,
    "toTime": 32400,
    "transitModes": "TRANSIT",
    "walkSpeed": 1.3888888888888888,
  },
  "regional": Object {
    "breaks": Array [],
    "comparisonGrid": null,
    "comparisonId": null,
    "grid": null,
    "id": null,
    "minimumImprovementProbability": 0.95,
    "percentile": 50,
    "probabilityGrid": null,
  },
}
`;

exports[`reducers > analysis should handle set comparison scenario 1`] = `
Object {
  "active": false,
  "comparisonBundleId": "COMPARISON BUNDLE ID",
  "comparisonInProgress": false,
  "comparisonModifications": null,
  "comparisonScenarioId": "COMPARISON SCENARIO ID",
  "comparisonVariant": 16,
  "isFetchingIsochrone": false,
  "isochroneCutoff": 60,
  "profileRequest": Object {
    "accessModes": "WALK",
    "bikeSafe": 1,
    "bikeSlope": 1,
    "bikeSpeed": 4.166666666666667,
    "bikeTime": 1,
    "bikeTrafficStress": 4,
    "carSpeed": 20,
    "date": "2016-12-20",
    "directModes": "WALK",
    "egressModes": "WALK",
    "fromTime": 25200,
    "maxBikeTime": 20,
    "maxCarTime": 45,
    "maxRides": 4,
    "maxWalkTime": 20,
    "minBikeTime": 10,
    "minCarTime": 10,
    "monteCarloDraws": 200,
    "reachabilityThreshold": 0,
    "streetTime": 90,
    "suboptimalMinutes": 5,
    "toTime": 32400,
    "transitModes": "TRANSIT",
    "walkSpeed": 1.3888888888888888,
  },
  "regional": Object {
    "breaks": Array [],
    "comparisonGrid": null,
    "comparisonId": null,
    "grid": null,
    "id": null,
    "minimumImprovementProbability": 0.95,
    "percentile": 50,
    "probabilityGrid": null,
  },
}
`;

exports[`reducers > analysis should handle set isochrone cutoff 1`] = `
Object {
  "active": false,
  "comparisonInProgress": false,
  "isFetchingIsochrone": false,
  "isochroneCutoff": 123,
  "profileRequest": Object {
    "accessModes": "WALK",
    "bikeSafe": 1,
    "bikeSlope": 1,
    "bikeSpeed": 4.166666666666667,
    "bikeTime": 1,
    "bikeTrafficStress": 4,
    "carSpeed": 20,
    "date": "2016-12-20",
    "directModes": "WALK",
    "egressModes": "WALK",
    "fromTime": 25200,
    "maxBikeTime": 20,
    "maxCarTime": 45,
    "maxRides": 4,
    "maxWalkTime": 20,
    "minBikeTime": 10,
    "minCarTime": 10,
    "monteCarloDraws": 200,
    "reachabilityThreshold": 0,
    "streetTime": 90,
    "suboptimalMinutes": 5,
    "toTime": 32400,
    "transitModes": "TRANSIT",
    "walkSpeed": 1.3888888888888888,
  },
  "regional": Object {
    "breaks": Array [],
    "comparisonGrid": null,
    "comparisonId": null,
    "grid": null,
    "id": null,
    "minimumImprovementProbability": 0.95,
    "percentile": 50,
    "probabilityGrid": null,
  },
}
`;

exports[`reducers > analysis should handle set isochrone fetch status 1`] = `
Object {
  "active": false,
  "comparisonInProgress": false,
  "isFetchingIsochrone": true,
  "isochroneCutoff": 60,
  "profileRequest": Object {
    "accessModes": "WALK",
    "bikeSafe": 1,
    "bikeSlope": 1,
    "bikeSpeed": 4.166666666666667,
    "bikeTime": 1,
    "bikeTrafficStress": 4,
    "carSpeed": 20,
    "date": "2016-12-20",
    "directModes": "WALK",
    "egressModes": "WALK",
    "fromTime": 25200,
    "maxBikeTime": 20,
    "maxCarTime": 45,
    "maxRides": 4,
    "maxWalkTime": 20,
    "minBikeTime": 10,
    "minCarTime": 10,
    "monteCarloDraws": 200,
    "reachabilityThreshold": 0,
    "streetTime": 90,
    "suboptimalMinutes": 5,
    "toTime": 32400,
    "transitModes": "TRANSIT",
    "walkSpeed": 1.3888888888888888,
  },
  "regional": Object {
    "breaks": Array [],
    "comparisonGrid": null,
    "comparisonId": null,
    "grid": null,
    "id": null,
    "minimumImprovementProbability": 0.95,
    "percentile": 50,
    "probabilityGrid": null,
  },
}
`;

exports[`reducers > analysis should handle set isochrone latlng 1`] = `
Object {
  "active": false,
  "comparisonInProgress": false,
  "isFetchingIsochrone": false,
  "isochroneCutoff": 60,
  "isochroneLatLng": 123,
  "profileRequest": Object {
    "accessModes": "WALK",
    "bikeSafe": 1,
    "bikeSlope": 1,
    "bikeSpeed": 4.166666666666667,
    "bikeTime": 1,
    "bikeTrafficStress": 4,
    "carSpeed": 20,
    "date": "2016-12-20",
    "directModes": "WALK",
    "egressModes": "WALK",
    "fromTime": 25200,
    "maxBikeTime": 20,
    "maxCarTime": 45,
    "maxRides": 4,
    "maxWalkTime": 20,
    "minBikeTime": 10,
    "minCarTime": 10,
    "monteCarloDraws": 200,
    "reachabilityThreshold": 0,
    "streetTime": 90,
    "suboptimalMinutes": 5,
    "toTime": 32400,
    "transitModes": "TRANSIT",
    "walkSpeed": 1.3888888888888888,
  },
  "regional": Object {
    "breaks": Array [],
    "comparisonGrid": null,
    "comparisonId": null,
    "grid": null,
    "id": null,
    "minimumImprovementProbability": 0.95,
    "percentile": 50,
    "probabilityGrid": null,
  },
}
`;

exports[`reducers > analysis should handle set isochrone results 1`] = `
Object {
  "accessibility": 42,
  "active": false,
  "comparisonAccessibility": 55,
  "comparisonInProgress": false,
  "comparisonIsochrone": Object {
    "comparison": true,
  },
  "comparisonSpectrogramData": Array [
    "COMPARISON",
  ],
  "currentIndicator": "Jobs_total",
  "grid": Object {},
  "isFetchingIsochrone": false,
  "isochrone": Object {},
  "isochroneCutoff": 60,
  "profileRequest": Object {
    "accessModes": "WALK",
    "bikeSafe": 1,
    "bikeSlope": 1,
    "bikeSpeed": 4.166666666666667,
    "bikeTime": 1,
    "bikeTrafficStress": 4,
    "carSpeed": 20,
    "date": "2016-12-20",
    "directModes": "WALK",
    "egressModes": "WALK",
    "fromTime": 25200,
    "maxBikeTime": 20,
    "maxCarTime": 45,
    "maxRides": 4,
    "maxWalkTime": 20,
    "minBikeTime": 10,
    "minCarTime": 10,
    "monteCarloDraws": 200,
    "reachabilityThreshold": 0,
    "streetTime": 90,
    "suboptimalMinutes": 5,
    "toTime": 32400,
    "transitModes": "TRANSIT",
    "walkSpeed": 1.3888888888888888,
  },
  "regional": Object {
    "breaks": Array [],
    "comparisonGrid": null,
    "comparisonId": null,
    "grid": null,
    "id": null,
    "minimumImprovementProbability": 0.95,
    "percentile": 50,
    "probabilityGrid": null,
  },
  "spectrogramData": Array [
    "SCENARIO",
  ],
}
`;

exports[`reducers > analysis should handle set profile request 1`] = `
Object {
  "active": false,
  "comparisonInProgress": false,
  "isFetchingIsochrone": false,
  "isochroneCutoff": 60,
  "profileRequest": Object {
    "fromTime": 24321,
    "maxWalkTime": 20,
    "toTime": 25220,
  },
  "regional": Object {
    "breaks": Array [],
    "comparisonGrid": null,
    "comparisonId": null,
    "grid": null,
    "id": null,
    "minimumImprovementProbability": 0.95,
    "percentile": 50,
    "probabilityGrid": null,
  },
}
`;

exports[`reducers > analysis should handle set regional analysis grids 1`] = `
Object {
  "active": false,
  "comparisonInProgress": false,
  "isFetchingIsochrone": false,
  "isochroneCutoff": 60,
  "profileRequest": Object {
    "accessModes": "WALK",
    "bikeSafe": 1,
    "bikeSlope": 1,
    "bikeSpeed": 4.166666666666667,
    "bikeTime": 1,
    "bikeTrafficStress": 4,
    "carSpeed": 20,
    "date": "2016-12-20",
    "directModes": "WALK",
    "egressModes": "WALK",
    "fromTime": 25200,
    "maxBikeTime": 20,
    "maxCarTime": 45,
    "maxRides": 4,
    "maxWalkTime": 20,
    "minBikeTime": 10,
    "minCarTime": 10,
    "monteCarloDraws": 200,
    "reachabilityThreshold": 0,
    "streetTime": 90,
    "suboptimalMinutes": 5,
    "toTime": 32400,
    "transitModes": "TRANSIT",
    "walkSpeed": 1.3888888888888888,
  },
  "regional": Object {
    "breaks": undefined,
    "comparisonGrid": Object {
      "which": "COMPARISON GRID",
    },
    "comparisonId": null,
    "differenceGrid": Object {
      "which": "DIFFERENCE_GRID",
    },
    "grid": Object {
      "which": "GRID",
    },
    "id": null,
    "minimumImprovementProbability": 0.95,
    "percentile": 50,
    "probabilityGrid": Object {
      "which": "PROBABILITY GRID",
    },
  },
}
`;
